Fix header gap for mobiles & other pages

--- a/style.css
+++ b/style.css
@@ -8,10 +8,18 @@ header {
     width: 100%;
     height: 70px;
     background-color: white;
+    font-family: 'Oswald', sans-serif;
     display: grid;
     grid-template: 70px 2fr 1fr 1fr 1fr / 70px;
-    font-family: 'Oswald', sans-serif;
+    column-gap: 1%;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    header {
+        column-gap: 2%;
+    }
+} 
 
  header img {
     width: 50px;
@@ -45,11 +53,3 @@ header h2 {
 .nav {
     justify-self: center;
 }
-
-/*
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: 
-    header img {
-        width: 10%;
-    }
-} */
